--- a/import.qmd
+++ b/import.qmd
@@ -1,3 +1,4 @@
+
 ---
 title: "Import practical"
 author: Your name here
@@ -29,7 +30,8 @@ We will take advantage of the RStudio projects and store data files in a sub-fol
 
 ```{r}
 # Your answer in code
-
+renv::restore()
+library(readr)
 ```
 
 
@@ -42,6 +44,7 @@ If you load the library only in the console and forget to place a chunk to load 
 
 
 ## Use `readr` to load your first file
+
 
 
 ### Load the `blood_fat` file
@@ -77,7 +80,7 @@ For example, you folder structure could be (depending on the picked names) as he
 
 
 ```{r}
-# Your answer in code
+readr::read_delim("data/blood_fat.csv")
 
 ```
 
@@ -92,6 +95,10 @@ If we are happy with the guessed delimiter and the column names / types, we coul
 
 ```{r}
 # Your answer in code
+blood_fat <- "data/blood_fat.csv"
+readr::read_delim(blood_fat,
+           col_names= FALSE,
+           show_col_types= FALSE)
 
 
 ```
@@ -106,7 +113,7 @@ If we are happy with the guessed delimiter and the column names / types, we coul
 
 
 
-> Your answer as text
+> 26(rows) x 5(colunms)
 
 
 
@@ -114,7 +121,7 @@ If we are happy with the guessed delimiter and the column names / types, we coul
 
 
 
-> Your answer as text
+> chr
 
 
 
@@ -130,7 +137,12 @@ In the `col_types = cols(....)` you can use the columns bare names and either th
 
 
 ```{r}
-# Your answer in code
+blood_fat <- "data/blood_fat.csv"
+readr::read_delim(blood_fat,
+                  col_types=cols(
+                    age="i",
+                    id="i"
+                  ))
 
 
 
@@ -140,8 +152,13 @@ In the `col_types = cols(....)` you can use the columns bare names and either th
 ### Read the `blood_fat.csv` specifying the data types of `age` and `id` as integers, skipping `weight`.
 
 ```{r}
-# Your answer in code
-
+blood_fat <- "data/blood_fat.csv"
+readr::read_delim(blood_fat,
+                  col_types=cols(
+                    age="i",
+                    id="i",
+                    weight="_"
+                  ))
 
 
 
